# openzeppelin-tooling-stellar-workshop

./: README.md  slides.md
openzeppelin-monitor/: .env.example  .gitignore  .pre-commit-hooks.yaml  .yamlfix.toml  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DOCKER_README.md  Dockerfile.development  Dockerfile.production  Makefile.toml  README.md  SECURITY.md  docker-compose.yaml  increment.sh  netlify.toml  rustfmt.toml  setup_and_run.sh
openzeppelin-monitor/.github/: RELEASE.md  codecov.yml  dependabot.yml  pull_request_template.md
openzeppelin-monitor/.github/ISSUE_TEMPLATE/: bug.yml
openzeppelin-monitor/.github/actions/prepare/: action.yml
openzeppelin-monitor/.github/workflows/: ci.yaml  cla.yml  codeql.yml  pr-title.yaml  rc.yml  release-bins.yml  release-docker.yml  release-docs.yml  release-please.yml  release-sbom.yml  rust-docs-url.yml  scorecard.yml  semgrep.yml  test-bins.yml  update-lock.yaml
openzeppelin-monitor/cmd/prometheus/: prometheus.yml
openzeppelin-monitor/cmd/prometheus/dashboards/: dashboard.yml  monitor_metrics.json
openzeppelin-monitor/cmd/prometheus/datasources/: prometheus.yml
openzeppelin-monitor/config/monitors/: increment_monitor.json
openzeppelin-monitor/config/networks/: stellar_testnet.json
openzeppelin-monitor/config/triggers/: increment_notifications.json
openzeppelin-monitor/docs/: antora.yml  package-lock.json  package.json
openzeppelin-monitor/docs/modules/ROOT/: nav.adoc
openzeppelin-monitor/examples/config/filters/: evm_filter_block_number.js  evm_filter_block_number.py  stellar_filter_block_number.js  stellar_filter_block_number.py  stellar_filter_block_number.sh
openzeppelin-monitor/examples/config/monitors/: stellar_swap_dex.json
openzeppelin-monitor/examples/config/networks/: arbitrum_nova.json  arbitrum_one.json  arbitrum_sepolia.json  avalanche_c_chain.json  base.json  (+24 more)
openzeppelin-monitor/fuzz/: Cargo.toml  README.md
openzeppelin-monitor/fuzz/fuzz_targets/: expression_parser.rs  xdr_value_parser.rs
openzeppelin-monitor/scripts/: validate_network_config.sh
openzeppelin-monitor/scripts/linux/: sys_pkgs_core.sh  sys_pkgs_dev.sh
openzeppelin-monitor/src/: lib.rs  main.rs
openzeppelin-monitor/src/bootstrap/: mod.rs
openzeppelin-monitor/src/models/: mod.rs
openzeppelin-monitor/src/repositories/: error.rs  mod.rs  monitor.rs  network.rs  trigger.rs
openzeppelin-monitor/src/services/: mod.rs
openzeppelin-monitor/src/utils/: client_storage.rs  constants.rs  cron_utils.rs  http.rs  mod.rs  parsing.rs
openzeppelin-monitor/tests/: integration.rs  properties.rs
openzeppelin-monitor/tests/properties/: strategies.rs
(+226 files in other folders)
