[package]
name = "openzeppelin-monitor"
version = "1.0.0"
edition = "2021"
rust-version = "1.86"         #MSRV

[profile.release]
opt-level = 0
overflow-checks = false
panic = 'abort'

[profile.test]
debug = true
opt-level = 0
overflow-checks = true
panic = 'unwind'

[dependencies]
actix-rt = "2.0.0"
actix-web = "4"
alloy = { version = "0.15.6", features = ["full"] }
anyhow = { version = "1.0.97", features = ["std"] }
async-trait = "0.1"
backon = "1.5.1"
base64 = "0.22"
byte-unit = "5.1.6"
chrono = "0.4"
clap = { version = "4.5", features = ["cargo", "derive"] }
cron = "0.15.0"
dotenvy = "0.15.7"
email_address = "0.2.9"
futures = "0.3"
glob = "0.3"
hex = "0.4"
hmac = "0.12.0"
lazy_static = "1.5"
lettre = { version = "0.11.11", features = ["tokio1", "tokio1-native-tls"] }
libc = "0.2"
log = "0.4"
oz-keystore = "0.1.4"
prometheus = "0.14"
pulldown-cmark = "0.13.0"
regex = "1.11.0"
reqwest = { version = "=0.12.15", features = ["json"] }
reqwest-middleware = { version = "0.4.1", features = ["json"] }
reqwest-retry = "0.7.0"
rust_decimal = "1.37.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.0"
soroban-spec = "22.0.7"
stellar-rpc-client = "22.0.0"
stellar-strkey = "0.0.13"
stellar-xdr = "22.1.0"
sysinfo = "0.34.2"
thiserror = "2.0.12"
tokio = { version = "1.0", features = ["full"] }
tokio-cron-scheduler = "0.13.0"
tracing = "0.1.41"
tracing-appender = "0.2"
tracing-core = "0.1.33"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = "2.5"
urlencoding = "2.1.3"
uuid = "1.15.0"
winnow = "0.7.9"
zeroize = { version = "1.8.1", features = ["derive"] }

[dev-dependencies]
cargo-llvm-cov = "0.6"
mockall = "0.13.1"
mockito = "1.6.1"
once_cell = "1.20.0"
proptest = "1.6.0"
rand = "0.9.0"
tempfile = "3.2"
tracing-test = "0.2.5"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "openzeppelin-monitor"

[features]
test-ci-only = []
fuzzing = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }
